# tripboard-api

./: .env.dev  .gitignore  Dockerfile.dev  docker-compose.dev.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: base-ci.yaml
alembic/: env.py
alembic/versions/: 2025_12_03_1746-260004fa0b50_create_schema_tables.py  2025_12_03_1801-413ed422fcf3_fix_circular_fk.py  2025_12_07_1617-5891d439ec82_generate_tables.py  2025_12_07_1944-c0da2ffa33d8_use_uuid_pks_and_typed_models.py  2025_12_07_2121-f1f2c6756755_add_trip_participant_relationship.py  2025_12_08_1837-b748c935c154_change_dt_type_to_date.py  2025_12_15_0434-8cbfa8d0e747_add_is_active_field_in_trips_table.py
core/: db.py  models.py  settings.py  slugs.py
routers/: activities.py  api_v1.py  calendars.py  participants.py  trips.py
schemas/: activities.py  calendars.py  participants.py  trips.py
services/: activity_service.py  calendar_service.py  participant_service.py  trip_service.py
tests/: conftest.py  test_activity_routes.py  test_calendar_routes.py  test_participant_routes.py  test_routes.py  test_trip_routes.py
